--- a/src/Native/dune
+++ b/src/Native/dune
@@ -11,7 +11,7 @@
         icon icon_cocoa icon_win32
         shell shell_cocoa shell_gtk shell_win32
         utilities
-        ReveryAppDelegate
+        ReveryAppDelegate ReveryAppDelegate_func
         ReveryProgressBar)
     (c_flags :standard -Wall -Wextra -Werror (:include c_flags.sexp))
     (c_library_flags (:include c_library_flags.sexp))
