--- a/scripts/docker/centos/Dockerfile
+++ b/scripts/docker/centos/Dockerfile
@@ -25,7 +25,7 @@ RUN npm install --global --unsafe-perm=true esy@0.6.1
 
 RUN yum -y install epel-release
 RUN yum -y remove git
-RUN rpm -U https://centos7.iuscommunity.org/ius-release.rpm
+RUN rpm -U https://repo.ius.io/ius-release-el7.rpm
 RUN yum -y install git2u
 
 RUN yum -y install nasm
