--- a/test/dune
+++ b/test/dune
@@ -3,6 +3,8 @@
     (public_name ReveryTestRunner)
     (package ReveryTest)
     (libraries
+        pastel.lib
+        sdl2
         Revery_Core_Test
         Revery_Math_Test
         Revery_UI_Test
