--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "build": "esy b",
-    "build:release": "esy b dune build -p harfbuzz,Revery -j4",
+    "build:release": "esy b dune build -p font-manager,harfbuzz,Revery -j4",
     "test": "esy b dune runtest",
     "format": "esy #{os == 'windows' ? 'b' : ''} bash .ci/format.sh #{os}",
     "run": "esy x Examples"
@@ -25,9 +25,10 @@
       }
     },
     "build": [
-      "dune build -p harfbuzz,Revery -j4"
+      "dune build -p font-manager,harfbuzz,Revery -j4"
     ],
     "install": [
+      "esy-installer font-manager.install",
       "esy-installer harfbuzz.install",
       "esy-installer Revery.install",
       "bash -c \"#{os == 'windows' ? 'cp /usr/x86_64-w64-mingw32/sys-root/mingw/bin/*.dll \\'$cur__bin\\'': ':'}\""
@@ -46,7 +47,6 @@
     "flex": "1.2.3",
     "reperf": "^1.4.0",
     "@reason-native/console": "^0.0.3",
-    "reason-font-manager": "revery-ui/reason-font-manager#38af5f0552fca41d0a5b572b2a51fee198aaaa4a",
     "rench": "^1.9.1",
     "rebez": "jchavarri/rebez#03fa3b7",
     "reason-sdl2": "^2.10.3032",
