fix: Source .bashrc.

--- a/scripts/docker/archlinux/Dockerfile
+++ b/scripts/docker/archlinux/Dockerfile
@@ -7,6 +7,7 @@ RUN pacman -S --noconfirm base base-devel git npm
 RUN mkdir "${HOME}/.npm-packages"
 RUN npm config set prefix "${HOME}/.npm-packages"
 RUN echo export PATH=\"\$PATH:\${HOME}/.npm-packages/bin\" >> .bashrc
+RUN source .bashrc
 RUN npm install -g esy
 
 RUN npm --version
