fix(ci): Use docker ENV.

--- a/scripts/docker/archlinux/Dockerfile
+++ b/scripts/docker/archlinux/Dockerfile
@@ -1,13 +1,15 @@
 FROM archlinux:latest
 
-RUN pacman -Syu --noconfirm
+ENV NPM_PATH=$HOME/.npm-packages
+ENV PATH=$NPM_PATH:$PATH
+RUN echo $NPM_PATH
 
+RUN pacman -Syu --noconfirm
 RUN pacman -S --noconfirm base base-devel git npm
 
-RUN mkdir "${HOME}/.npm-packages"
-RUN npm config set prefix "${HOME}/.npm-packages"
-RUN echo export PATH=\"\$PATH:\${HOME}/.npm-packages/bin\" >> .bashrc
-RUN source $HOME/.bashrc
+RUN mkdir $NPM_PATH
+RUN npm config set prefix $NPM_PATH
+
 RUN npm install -g esy
 
 RUN npm --version
