ci: Add install and cache/build step.

--- a/.github/workflows/validate-pr.yml
+++ b/.github/workflows/validate-pr.yml
@@ -141,6 +141,19 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - run: docker build -t ${{ matrix.os }} scripts/docker/${{ matrix.os }}
+      - run: docker run --rm --volume $(pwd):/revery --volume ${{ steps.print_esy_cache.outputs.esy_cache }}:/esy/store ${{ matrix.os }} bash -c "cd /revery && esy install --prefix-path=/esy/store"
+      - name: Try to restore dependencies cache
+        id: deps-cache
+        uses: actions/cache@v1.1.2
+        with:
+          path: ${{ steps.print_esy_cache.outputs.esy_cache }}
+          key: ${{ matrix.os }}-${{ hashFiles('**/index.json') }}
+          restore-keys: |
+            ${{ matrix.os }}-
+      - name: Build dependencies in release
+        if: steps.deps-cache.outputs.cache-hit != 'true'
+        run: docker run --rm --volume $(pwd):/revery --volume ${{ steps.print_esy_cache.outputs.esy_cache }}:/esy/store ${{ matrix.os }} bash -c "cd /revery && esy build-dependencies --release --prefix-path=/esy/store"
+
   build:
     name: Build
     runs-on: ${{ matrix.os }}
