--- a/scripts/docker/archlinux/Dockerfile
+++ b/scripts/docker/archlinux/Dockerfile
@@ -1,6 +1,6 @@
 FROM archlinux:latest
 
 RUN pacman -Syu --noconfirm
-RUN pacman -S --noconfirm base base-devel git npm
+RUN pacman -S --noconfirm base base-devel git npm shasum
 
 RUN npm install --verbose --global --unsafe-perm=true esy@0.6.4
