--- a/scripts/docker/archlinux/Dockerfile
+++ b/scripts/docker/archlinux/Dockerfile
@@ -6,4 +6,8 @@ RUN pacman -S --noconfirm base base-devel git npm perl
 
 ENV PATH=$PATH:/usr/bin/core_perl
 
+# workaround hack while ocaml-secondary-compiler@4.08.1 work well with gcc 10
+RUN mv /usr/bin/gcc /usr/bin/gcc-orig
+RUN echo -en "#!/usr/bin/sh\n/usr/bin/gcc-orig -fcommon \"$@\"" > /usr/bin/gcc
+
 RUN npm install --verbose --global --unsafe-perm=true esy@0.6.4
