ci(dep): Add nasm on archlinux.

--- a/scripts/docker/archlinux/Dockerfile
+++ b/scripts/docker/archlinux/Dockerfile
@@ -5,7 +5,7 @@ RUN pacman -S --noconfirm base base-devel git npm perl
 #perl for shasum binary
 
 # Revery special deps
-RUN pacman -S --noconfirm libpng libxcursor libxi libxinerama libxrandr harfbuzz glu gtk3 fontconfig
+RUN pacman -S --noconfirm libpng libxcursor libxi libxinerama libxrandr harfbuzz glu gtk3 fontconfig nasm
 ENV PATH=$PATH:/usr/bin/core_perl
 
 # workaround hack while ocaml-secondary-compiler@4.08.1 work well with gcc 10
