--- a/package.json
+++ b/package.json
@@ -7,8 +7,6 @@
     "url": "https://github.com/bryphe/revery/issues"
   },
   "scripts": {
-    "build": "esy b",
-    "build:release": "esy b dune build -p font-manager,harfbuzz,Revery -j4",
     "test": "esy b dune runtest",
     "format": "esy #{os == 'windows' ? 'b' : ''} bash .ci/format.sh #{os}",
     "run": "esy x Examples"
@@ -25,16 +23,19 @@
       }
     },
     "build": [
-      "dune build -p font-manager,harfbuzz,Revery -j4"
+      "dune build -p font-manager,harfbuzz,skia,Revery -j4"
     ],
     "install": [
       "esy-installer font-manager.install",
       "esy-installer harfbuzz.install",
+      "esy-installer skia.install",
       "esy-installer Revery.install",
-      "bash -c \"#{os == 'windows' ? 'cp /usr/x86_64-w64-mingw32/sys-root/mingw/bin/*.dll \\'$cur__bin\\'': ':'}\""
+      "bash -c \"#{os == 'windows' ? 'cp /usr/x86_64-w64-mingw32/sys-root/mingw/bin/*.dll \\'$cur__bin\\'': ':'}\"",
+      "bash -c \"cp #{esy-skia.bin}/skia.dll \\'$cur__bin\\' #{os == 'windows' ? '' : '2>/dev/null || true'}\""
     ]
   },
   "dependencies": {
+    "@opam/ctypes": "0.15.1",
     "@opam/dune": ">=1.6.0",
     "@opam/dune-configurator": "*",
     "@esy-ocaml/reason": "^3.6.0",
@@ -43,14 +44,17 @@
     "@opam/lwt_ppx": "^1.1.0",
     "@opam/ppx_deriving": "*",
     "@brisk/brisk-reconciler": "briskml/brisk-reconciler#10cab2d",
+    "esy-freetype2": "^2.9.1007",
     "esy-harfbuzz": "^1.9.1008",
+    "esy-sdl2": "*",
+    "esy-skia": "revery-ui/esy-skia#d60e5fe",
     "flex": "1.2.3",
     "reperf": "^1.4.0",
     "@reason-native/console": "^0.0.3",
     "rench": "^1.9.1",
     "rebez": "jchavarri/rebez#03fa3b7",
+    "reason-native-crash-utils": "onivim/reason-native-crash-utils#38c8f003a0ab26d6e94932e88af9b58ce758f9a6",
     "reason-sdl2": "^2.10.3032",
-    "reason-skia": "revery-ui/reason-skia#5e94192b90b71122fa821e9c4e6b979b15c7df83",
     "revery-text-wrap": "revery-ui/revery-text-wrap#966383e",
     "@glennsl/timber": "^1.2.0"
   },
