--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
       "esy-installer skia.install",
       "esy-installer Revery.install",
       "bash -c \"#{os == 'windows' ? 'cp /usr/x86_64-w64-mingw32/sys-root/mingw/bin/*.dll \\'$cur__bin\\'': ':'}\"",
-      "bash -c \"cp #{esy-skia.bin}/skia.dll \\'$cur__bin\\' #{os == 'windows' ? '' : '2>/dev/null || true'}\""
+      "bash -c \"cp #{esy-skia.bin}/skia.dll \\'$cur__bin\\' #{os == 'windows' ? '' : '2>/dev/null || true'}\"",
+      "bash -c \"cp #{esy-sdl2.bin}/*.dll \\'$cur__bin\\' #{os == 'windows' ? '' : '2>/dev/null || true'}\""
     ]
   },
   "dependencies": {
@@ -46,7 +47,7 @@
     "@brisk/brisk-reconciler": "briskml/brisk-reconciler#10cab2d",
     "esy-freetype2": "^2.9.1007",
     "esy-harfbuzz": "^1.9.1008",
-    "esy-sdl2": "*",
+    "esy-sdl2": "^2.0.10008",
     "esy-skia": "revery-ui/esy-skia#d60e5fe",
     "flex": "1.2.3",
     "reperf": "^1.4.0",
@@ -54,7 +55,6 @@
     "rench": "^1.9.1",
     "rebez": "jchavarri/rebez#03fa3b7",
     "reason-native-crash-utils": "onivim/reason-native-crash-utils#38c8f003a0ab26d6e94932e88af9b58ce758f9a6",
-    "reason-sdl2": "^2.10.3032",
     "revery-text-wrap": "revery-ui/revery-text-wrap#966383e",
     "@glennsl/timber": "^1.2.0"
   },
