--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "@opam/dune": "2.5.0"
   },
   "devDependencies": {
+    "@reason-native/rely": "^3.2.1",
     "ocaml": "~4.10",
     "esy-astyle": "zbaylin/esy-astyle#59bc21a",
     "@opam/ocaml-lsp-server": "ocaml/ocaml-lsp:ocaml-lsp-server.opam#38bd51a15c98b4f6ff841e5c914a8cdacee15ea6"
