build(deps): Explicitely require reperf.

--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "esy-skia": "revery-ui/esy-skia#d60e5fe",
     "fetch-native-lwt": "0.1.0-alpha.5",
     "flex": "1.2.3",
-    "reperf": "^1.4.0",
+    "@reason-native/console": "^0.0.3",
     "rench": "^1.9.1",
     "rebez": "jchavarri/rebez#03fa3b7",
     "reason-native-crash-utils": "onivim/reason-native-crash-utils#38c8f00",
@@ -68,7 +68,8 @@
     "@reason-native/rely": "^3.2.1",
     "ocaml": "~4.10",
     "esy-astyle": "zbaylin/esy-astyle#59bc21a",
-    "@opam/ocaml-lsp-server": "ocaml/ocaml-lsp:ocaml-lsp-server.opam#38bd51a15c98b4f6ff841e5c914a8cdacee15ea6"
+    "@opam/ocaml-lsp-server": "ocaml/ocaml-lsp:ocaml-lsp-server.opam#38bd51a15c98b4f6ff841e5c914a8cdacee15ea6",
+    "reperf": "^1.4.0"
   }
 }
 
