--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@opam/lwt": "^4.0.0",
     "@opam/lwt_ppx": "^1.1.0",
     "@opam/ppx_deriving": "*",
+    "@opam/omd": "ocaml/omd:omd.opam#1535e3c",
     "@brisk/brisk-reconciler": "briskml/brisk-reconciler#10cab2d",
     "esy-freetype2": "^2.9.1007",
     "esy-harfbuzz": "^1.9.1008",
