--- a/.github/workflows/validate-pr.yml
+++ b/.github/workflows/validate-pr.yml
@@ -164,6 +164,9 @@ jobs:
         run: docker run --rm --volume $(pwd):/revery --volume ~:/esy/store ${{ matrix.os }} bash -c "cd /revery && esy build --release --prefix-path=/esy/store/.esy"
       - name: Build test/dev dependencies
         run: docker run --rm --volume $(pwd):/revery --volume ~:/esy/store ${{ matrix.os }} bash -c "cd /revery && esy build-dependencies --prefix-path=/esy/store/.esy"
+      - name: Clean global store
+        if: steps.deps-cache.outputs.cache-hit != 'true'
+        run: docker run --rm --volume $(pwd):/revery --volume ~:/esy/store ${{ matrix.os }} bash -c "cd /revery && esy cleanup . --prefix-path=/esy/store/.esy"
 
   build:
     needs: [doc, lint]
@@ -206,7 +209,7 @@ jobs:
         run: esy build --release
       - name: Build test/dev dependencies
         if: steps.deps-cache.outputs.cache-hit != 'true'
-        run: |
-          esy build-dependencies
-          # We might have used restore-keys
-          esy cleanup .
+        run: esy build-dependencies
+      - name: Clean global store
+        if: steps.deps-cache.outputs.cache-hit != 'true'
+        run: esy cleanup .
