build: dune upgrade

--- a/src/Core/dune
+++ b/src/Core/dune
@@ -1,5 +1,7 @@
 (library
-    (name Revery_Core)
-    (public_name Revery.Core)
-    (preprocess (pps ppx_deriving.show))
-    (libraries threads console.lib str lwt sdl2 skia flex Rench re Revery_Native revery-text-wrap timber))
+ (name Revery_Core)
+ (public_name Revery.Core)
+ (preprocess
+  (pps ppx_deriving.show))
+ (libraries threads console.lib str lwt sdl2 skia flex Rench re Revery_Native
+   revery-text-wrap timber))
