--- a/src/Font/dune
+++ b/src/Font/dune
@@ -1,16 +1,7 @@
 (library
-    (name Revery_Font)
-    (public_name Revery.Font)
-    (preprocess (pps lwt_ppx))
-    (libraries 
-        harfbuzz
-        font-manager
-        lru
-        lwt
-        lwt.unix
-        sdl2
-        flex
-        rebez.lib
-        Revery_Core
-        Revery_Math
-))
+ (name Revery_Font)
+ (public_name Revery.Font)
+ (preprocess
+  (pps lwt_ppx))
+ (libraries harfbuzz font-manager lru lwt lwt.unix sdl2 flex rebez.lib
+   Revery_Core Revery_Math))
