--- a/bench/exe/dune
+++ b/bench/exe/dune
@@ -1,11 +1,11 @@
 (executable
-    (name bench)
-    (public_name ReveryBench)
-    (libraries ReveryBench.lib Skia_Bench)
-    (package ReveryBench)
-)
+ (modes byte exe)
+ (name bench)
+ (public_name ReveryBench)
+ (libraries ReveryBench.lib Skia_Bench)
+ (package ReveryBench))
 
 (install
-    (section bin)
-    (package ReveryBench)
-    (files TestFont.ttf))
+ (section bin)
+ (package ReveryBench)
+ (files TestFont.ttf))
