--- a/bench/reason-skia/dune
+++ b/bench/reason-skia/dune
@@ -1,9 +1,4 @@
 (library
-    (name Skia_Bench)
-    (ocamlopt_flags -linkall)
-    (libraries
-        skia
-        skia.wrapped
-        skia.wrapped.bindings
-        reperf.lib
-))
+ (name Skia_Bench)
+ (ocamlopt_flags -linkall)
+ (libraries skia skia.wrapped skia.wrapped.bindings reperf.lib))
