--- a/examples/skia-cli/dune
+++ b/examples/skia-cli/dune
@@ -1,14 +1,10 @@
 (executables
-    (names SkiaCli)
-    (package ReveryExamples)
-    (public_names SkiaCli)
-    (modes native byte)
-    (libraries
-        skia
-        skia.wrapped.bindings
-        skia.wrapped
-        reason-native-crash-utils.asan
-))
+ (names SkiaCli)
+ (package ReveryExamples)
+ (public_names SkiaCli)
+ (modes native byte)
+ (libraries skia skia.wrapped.bindings skia.wrapped
+   reason-native-crash-utils.asan))
 
 (install
  (section bin)
