--- a/src/Draw/dune
+++ b/src/Draw/dune
@@ -1,16 +1,7 @@
 (library
-    (name Revery_Draw)
-    (public_name Revery.Draw)
-    (preprocess (pps lwt_ppx))
-    (libraries 
-        skia
-        brisk-reconciler
-        lwt 
-        lwt.unix
-        sdl2
-        flex
-        rebez.lib
-        Revery_Core
-        Revery_Font
-        Revery_Math
-))
+ (name Revery_Draw)
+ (public_name Revery.Draw)
+ (preprocess
+  (pps lwt_ppx))
+ (libraries skia brisk-reconciler lwt lwt.unix sdl2 flex rebez.lib
+   Revery_Core Revery_Font Revery_Math))
