--- a/src/Utility/dune
+++ b/src/Utility/dune
@@ -1,6 +1,10 @@
 (library
-    (name Revery_Utility)
-    (public_name Revery.Utility)
-    (c_flags :standard -Wall -Wextra -Werror)
-    (preprocess (pps ppx_deriving.show))
-    (libraries threads console.lib str lwt sdl2 skia flex Rench re Revery_Core Revery_UI revery-text-wrap timber))
+ (foreign_stubs
+  (language c)
+  (flags :standard -Wall -Wextra -Werror))
+ (name Revery_Utility)
+ (public_name Revery.Utility)
+ (preprocess
+  (pps ppx_deriving.show))
+ (libraries threads console.lib str lwt sdl2 skia flex Rench re Revery_Core
+   Revery_UI revery-text-wrap timber))
