--- a/test/dune
+++ b/test/dune
@@ -1,10 +1,6 @@
 (executable
-    (name TestRunner)
-    (public_name ReveryTestRunner)
-    (package ReveryTest)
-    (libraries
-        Revery_Core_Test
-        Revery_Math_Test
-        Revery_UI_Test
-        Skia_Test
-            ))
+ (modes byte exe)
+ (name TestRunner)
+ (public_name ReveryTestRunner)
+ (package ReveryTest)
+ (libraries Revery_Core_Test Revery_Math_Test Revery_UI_Test Skia_Test))
