--- a/test/reason-skia/dune
+++ b/test/reason-skia/dune
@@ -1,11 +1,7 @@
-(library 
-    (name Skia_Test)
-    (flags (:standard (-w -39)))
-    (ocamlopt_flags -linkall -g)
-    (libraries rely.lib rely.internal
-        skia
-        skia.wrapped.bindings
-        skia.wrapped
-        )
-
-)
+(library
+ (name Skia_Test)
+ (flags
+  (:standard
+   (-w -39)))
+ (ocamlopt_flags -linkall -g)
+ (libraries rely.lib rely.internal skia skia.wrapped.bindings skia.wrapped))
