--- a/src/reason-skia/wrapped/c/dune
+++ b/src/reason-skia/wrapped/c/dune
@@ -1,5 +1,5 @@
 (rule
- (targets c_flags.txt c_library_flags.txt)
+ (targets c_flags.txt c_flags.sexp c_library_flags.txt)
  (deps
   (:discover ../../config/discover.exe))
  (action
@@ -10,30 +10,8 @@
  (public_name skia.wrapped.c)
  (preprocess no_preprocessing)
  (libraries sdl2)
- (self_build_stubs_archive (skia_wrapped_c)))
-
-(rule
- (targets libskia_wrapped_c_stubs.a)
- (deps c_stubs.o)
- (action
-  (run ar rcs %{targets} %{deps})))
-
-(rule
- (targets dllskia_wrapped_c_stubs.dll)
- (deps c_stubs.o)
- (action
-  (run %{cc} -shared -o %{targets} %{deps} %{read-lines:c_library_flags.txt})))
-
-(rule
- (targets dllskia_wrapped_c_stubs.so)
- (deps c_stubs.o)
- (action
-  (run %{cc} %{read-lines:c_library_flags.txt} -shared -o %{targets} %{deps})))
-
-(rule
- (targets c_stubs.o)
- (deps
-  (:c c_stubs.c c_stubs.h)
-  c_flags.txt)
- (action
-  (run %{cc} %{read-lines:c_flags.txt} -c %{c})))
+ (foreign_stubs
+  (language c)
+  (names c_stubs)
+  (flags
+   (:include c_flags.sexp))))
