font-manager use feature detection

--- a/src/reason-font-manager/dune
+++ b/src/reason-font-manager/dune
@@ -3,12 +3,14 @@
  (public_name font-manager)
  (library_flags
   (:include flags.sexp))
- (c_flags (:include c_flags.sexp))
- (cxx_flags (:include cxx_flags.sexp))
+ (c_flags
+  (:include c_flags.sexp))
+ (cxx_flags
+  (:include cxx_flags.sexp))
  (cxx_names FontManager FontManagerWindows FontManagerMac FontManagerLinux))
 
 (rule
- (targets c_flags.sexp cxx_flags.sexp flags.sexp)
+ (targets config.h c_flags.sexp cxx_flags.sexp flags.sexp)
  (deps
   (:discover config/discover.exe))
  (action
