--- a/package.json
+++ b/package.json
@@ -22,13 +22,12 @@
         "scope": "global"
       }
     },
-    "build": [
-      "dune build -p font-manager,harfbuzz,skia,Revery -j4"
-    ],
+    "build": "dune build -p font-manager,harfbuzz,skia,sdl2,Revery",
     "install": [
       "esy-installer font-manager.install",
       "esy-installer harfbuzz.install",
       "esy-installer skia.install",
+      "esy-installer sdl2.install",
       "esy-installer Revery.install",
       "bash -c \"#{os == 'windows' ? 'cp /usr/x86_64-w64-mingw32/sys-root/mingw/bin/*.dll \\'$cur__bin\\'': ':'}\"",
       "bash -c \"cp #{esy-skia.bin}/skia.dll \\'$cur__bin\\' #{os == 'windows' ? '' : '2>/dev/null || true'}\"",
@@ -72,4 +71,3 @@
     "@opam/ocaml-lsp-server": "ocaml/ocaml-lsp:ocaml-lsp-server.opam#38bd51a15c98b4f6ff841e5c914a8cdacee15ea6"
   }
 }
-
