--- a/src/reason-sdl2/dune
+++ b/src/reason-sdl2/dune
@@ -1,6 +1,6 @@
 (library
     (name sdl2)
-    (public_name Revery.sdl2)
+    (public_name sdl2)
     (library_flags (:include flags.sexp))
     (c_library_flags (:include c_library_flags.sexp))
     (c_flags (:include c_flags.sexp))
