--- a/examples/dune
+++ b/examples/dune
@@ -2,7 +2,7 @@
  (names Examples)
  (preprocess
   (pps brisk-reconciler.ppx lwt_ppx))
- (package Revery)
+ (package ReveryExamples)
  (public_names Examples)
  (libraries ExampleStubs skia str Revery Revery_Lwt flex timber))
 
