Examples: Separate out bytecode and native builds

--- a/src/Core/dune
+++ b/src/Core/dune
@@ -2,4 +2,4 @@
     (name Revery_Core)
     (public_name Revery.Core)
     (preprocess (pps ppx_deriving.show))
-    (libraries threads console.lib str lwt sdl2 skia flex Rench re Revery_Native revery-text-wrap timber))
+    (libraries threads console.lib str lwt sdl2 skia flex Rench re Revery_Native revery-text-wrap timber dynlink))
