--- a/examples/dune
+++ b/examples/dune
@@ -1,10 +1,4 @@
-(executables
- (names Examples)
- (preprocess
-  (pps brisk-reconciler.ppx lwt_ppx))
- (package ReveryExamples)
- (public_names Examples)
- (libraries ExampleStubs skia str Revery Revery_Lwt flex timber))
+(include examples.sexp)
 
 (install
  (section bin)
