Integrated Skia into Harfbuzz

--- a/src/reason-harfbuzz/dune
+++ b/src/reason-harfbuzz/dune
@@ -1,6 +1,7 @@
 (library
  (name harfbuzz)
  (public_name harfbuzz)
+ (libraries skia ctypes)
  (library_flags
   (:include flags.sexp))
  (c_flags (:include c_flags.sexp))
