Add Inconsolata for systems with unknown mono fonts

--- a/src/Font/dune
+++ b/src/Font/dune
@@ -14,3 +14,10 @@
         Revery_Core
         Revery_Math
 ))
+
+(copy_files files/*)
+
+(install
+ (section bin)
+ (package Revery)
+ (files Inconsolata.otf))
