Add tests for Font

--- a/test/dune
+++ b/test/dune
@@ -6,5 +6,6 @@
         Revery_Core_Test
         Revery_Math_Test
         Revery_UI_Test
+        Revery_Font_Test
         Skia_Test
             ))
