refactor(font): deprecate reason-font-manager in favor of Skia (#937)
* Begin migration to using Skia

* Move internally to Skia Font Manager

* Migrate examples to new Font Manager

* Fix memory corruption bug with Harfbuzz

* Use default mono font for code

* Add Inconsolata for systems with unknown mono fonts

* Migrate DrawBench to new Font API

* Formatting

* Add default serif font

* Bring back FontsExample

* Remove unrelated comments

* Add Typeface equal function

* Make Normal width the default

* Add tests for Font

* Fix tests

* Change Linux defaultSerif to Liberation Serif

* Change defaultSerif to TNR on Windows

* Remove reason-font-manager

* Remove FontManager from CI

* Rename toMaybeSkia -> toSkia

* format,

Co-authored-by: Github Runner <runner@runner.github.com>

--- a/src/Font/dune
+++ b/src/Font/dune
@@ -4,7 +4,6 @@
     (preprocess (pps lwt_ppx))
     (libraries 
         harfbuzz
-        font-manager
         lru
         lwt
         lwt.unix
@@ -14,3 +13,10 @@
         Revery_Core
         Revery_Math
 ))
+
+(copy_files files/*)
+
+(install
+ (section bin)
+ (package Revery)
+ (files Inconsolata.otf))
