feat(native): add Locale module (#938)
* Add locale bindings on macOS

* Add Locale implementation on Linux

* Add locale implementation on Windows

* Add locale to Environment

* Add a CAMLlocal to return

* Add missing newline to format script

* Free Windows pointer

* Add test

* Fix tests

* Fix freeing based on platform

--- a/src/Native/dune
+++ b/src/Native/dune
@@ -10,6 +10,7 @@
         notification notification_cocoa
         icon icon_cocoa icon_win32
         shell shell_cocoa shell_gtk shell_win32
+        locale locale_cocoa locale_win32
         utilities
         ReveryAppDelegate ReveryAppDelegate_func
         ReveryProgressBar)
