Bring in Zed dependencies

--- a/package.json
+++ b/package.json
@@ -46,6 +46,9 @@
     "@opam/markup": "0.8.2",
     "@opam/ppx_deriving": "*",
     "@opam/omd": "ocaml/omd:omd.opam#1535e3c",
+    "@opam/uucp": "*",
+    "@opam/uutf": "*",
+    "@opam/charInfo_width": "*",
     "@brisk/brisk-reconciler": "briskml/brisk-reconciler#10cab2d",
     "esy-freetype2": "^2.9.1007",
     "esy-harfbuzz": "^1.9.1008",
