--- a/src/Native/dune
+++ b/src/Native/dune
@@ -21,6 +21,6 @@
 (copy_files cocoa/*)
 
 (rule
-(targets flags.sexp c_flags.sexp c_library_flags.sexp)
+(targets config.h flags.sexp c_flags.sexp c_library_flags.sexp)
 (deps (:discover config/discover.exe))
 (action (run %{discover})))
