--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "@opam/charInfo_width": "*",
     "@brisk/brisk-reconciler": "briskml/brisk-reconciler#10cab2d",
     "esy-freetype2": "^2.9.1007",
-    "esy-harfbuzz": "^1.9.1008",
+    "@revery/esy-harfbuzz": "^2.6.8000",
     "esy-sdl2": "^2.0.10008",
     "esy-skia": "revery-ui/esy-skia#a3785f9",
     "fetch-native-lwt": "0.1.0-alpha.5",
