Remove external dependency

--- a/src/Core/dune
+++ b/src/Core/dune
@@ -4,4 +4,4 @@
  (preprocess
   (pps ppx_deriving.show))
  (libraries threads console.lib str lwt sdl2 skia flex Rench re Revery_Native
-   revery-text-wrap timber Revery_Zed))
+   Revery_TextWrap timber Revery_Zed))
